# glEndMyLife

./: Cargo.toml  README.md
src/: main.rs  shader.rs
src/shaders/: fragment.frag  vertex.vert
