[package]
name = "gl_end_my_life"
version = "0.1.0"
authors = ["Pavel-N <pavelnovak.ml@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl33 = { version = "0.2.1", features = ["global_loader"] }
glutin = "0.26.0"
png = "0.16.8"
nalgebra = "0.25.3"
